--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,16 @@ body {
     margin: 0;
     padding: 0;
     background-color: #faf0de;
-    overflow-x: clip;
+    
 
 
 
 
 }
+.overflow{
+    overflow-x: hidden;
+}
+
 
 h1 {
     font-size: 3rem;
