--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,20 @@
+
 .container {
     position: relative;
 }
 
+:root {
+  overflow: hidden;
+  height: 100%;
+}
 
 body {
-    margin: 0;
-    padding: 0;
+  position: relative;
+  overflow-y: scroll;
+  height: 100%;
     background-color: #faf0de;
+}
+    
     
 
 
